--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.8",
     "rimraf": "^5.0.7",
     "ts-node-dev": "^2.0.0",
@@ -27,6 +28,7 @@
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3"
   }
 }
