--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.5.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.8",
     "rimraf": "^5.0.7",
@@ -31,6 +32,7 @@
     "env-var": "^7.5.0",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3"
   }
